--- a/assets/style/cards/cardStart.scss
+++ b/assets/style/cards/cardStart.scss
@@ -17,6 +17,8 @@
             line-height: 100%;
             font-weight: 400;
 
+            margin-bottom: 4px;
+
             @include phone {
                 font-size: 18vw;
             }
@@ -52,9 +54,7 @@
             background-color: color-black();
 
             transition: .4s ease;
-            animation: showButton 2s;
-            animation-delay: 8s;
-            animation-fill-mode:forwards;
+            animation: showButton 2s 8s forwards;
             overflow: hidden;
 
             font-weight: 400;
@@ -74,10 +74,6 @@
                 height: 42px;
                 opacity: 0;
                 border: 1px solid color-white();
-
-                animation: showButton 2s;
-                animation-delay: 8s;
-                animation-fill-mode:forwards;
             }
 
         }
